add support for compact and full resultType
